version/0.3/_sources/examples/01-Detailed-Examples/index.rst.txt


.. _sphx_glr_examples_01-Detailed-Examples:

.. _ref_detailed_examples:

PyDPF-Post feature examples
~~~~~~~~~~~~~~~~~~~~~~~~~~~
These examples show how you use PyDPF-Post features.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extract results on named selections - Modal Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_01-named-selections-modal-simulation_thumb.png
    :alt: Extract results on named selections - Modal Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_01-named-selections-modal-simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract results on named selections - Modal Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extract components of results - Modal Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_02-modal-extract-sub-results_thumb.png
    :alt: Extract components of results - Modal Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_02-modal-extract-sub-results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract components of results - Modal Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore the data of a result with the DataFrame - Harmonic Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_03-explore-result-data-harmonic_thumb.png
    :alt: Explore the data of a result with the DataFrame - Harmonic Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_03-explore-result-data-harmonic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore the data of a result with the DataFrame - Harmonic Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extract stress/strain invariants - Static Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_04-invariants_thumb.png
    :alt: Extract stress/strain invariants - Static Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_04-invariants.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract stress/strain invariants - Static Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Export data contained in a DataFrame to a new format">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_05-export_data_thumb.png
    :alt: Export data contained in a DataFrame to a new format

  :ref:`sphx_glr_examples_01-Detailed-Examples_05-export_data.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Export data contained in a DataFrame to a new format</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/01-Detailed-Examples/01-named-selections-modal-simulation
   /examples/01-Detailed-Examples/02-modal-extract-sub-results
   /examples/01-Detailed-Examples/03-explore-result-data-harmonic
   /examples/01-Detailed-Examples/04-invariants
   /examples/01-Detailed-Examples/05-export_data

